Fix gaps

--- a/src/sass/blocks/_reasons-career.scss
+++ b/src/sass/blocks/_reasons-career.scss
@@ -34,10 +34,10 @@
         justify-content: center;
         justify-items: center;
         &-icon {
-            margin-bottom: 25px;
+            margin-bottom: 20px;
         }
         &-mininfo{
-            margin-top: 35px;
+            margin-top: 10px;
             font-weight: 400;
             font-size: 14px;
             line-height: 19px;
